fixed jumping project-slider & added blur onhover for project slider

--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ body{
     text-align: start;
     position: absolute;
     bottom: 50px;
-    /* left:-12vw; */
 
     min-width: 90vw;
     max-width: 100vw;
@@ -184,6 +183,11 @@ body{
     text-align:justify;
     margin-top: -13vh
   }
+  .project-slider{/*important! Prevent from jumping while sliding*/
+    height: 50vmin;
+    max-width:95vw;
+    min-width:95vw;
+  }
 }
 
 
@@ -197,10 +201,10 @@ body{
     flex-direction: row;
     width:98vw;
   }
-  .project-slider{
+  .project-slider{/*important! Prevent from jumping while sliding*/
     height: 50vmin;
-    max-width:50vw;
-    min-width:50vw;
+    max-width:53vw;
+    min-width:53vw;
   }
 
   .welcome-wrapper{
@@ -324,10 +328,6 @@ body{
   }
 
 
-  .about-text{
- 
-    /* font-size:2.2vmin; */
-  }
   
   
   
@@ -401,7 +401,8 @@ body{
 
 
 
-/*Scrollbar*/
+
+/*Scroll-navbar*/
 .swiper-pagination-bullet {
     margin-bottom: 30px;
 	padding: 5px 10px; 
@@ -646,7 +647,7 @@ body{
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
- backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
 
   z-index: 1000;
   display: none;
@@ -696,18 +697,16 @@ body{
 
 .project-slider{
 
-    min-width: 350px;
-    min-height: 200px;
-   
     display: flex;
     align-items: center;
     overflow: hidden;
+
 }
 
 .carousel{
     height: 100%;
-    min-width: 100%;
-     /* width:50%; */
+    min-width: 100%; 
+    width:50%;
 }
 
 .carousel-control-next, .carousel-control-prev {
@@ -721,7 +720,7 @@ body{
 
 .carousel-item>img{
     height: 50vmin;
-    /* width:max-content; */
+    width:max-content;
     border-radius: 3px;
 }
 .details{
@@ -745,6 +744,9 @@ body{
 
 
     color: whitesmoke;
+}
+.details>p{
+  width:90%
 }
 .links>a{
     color: whitesmoke;
@@ -779,6 +781,7 @@ body{
 }
 .carousel-item:hover .details{
     opacity: 1;
+    backdrop-filter: blur(3px);
 }
 
 
